# claude-bootstrap

./: .gitignore  CLAUDE.md  README.md  STARTUP.md  diagrams.md
.claude/rules/: git.md
.claude/skills/git/: SKILL.md
claude-bootstrap/docs/preset-agents/: orchestrator.md
claude-bootstrap/docs/preset-templates/: CLAUDE.md  agent.md  context.md  hook.md  rule.md  skill.md
claude-bootstrap/docs/report/: 2026-03-26-strategic-review.md  2026-03-27-01-00-handoff.md  2026-03-27-18-00-handoff.md  2026-03-31-02-00-handoff.md
claude-bootstrap/docs/research/: architectural_patterns_context_harness_engineering.md  skill-template.md
claude-bootstrap/eval/: DESIGN.md  METRICS.md  README.md  pyproject.toml  requirements.txt  summary.md
claude-bootstrap/eval/docs/: METRICS.md  README.md
claude-bootstrap/eval/docs/templates/: project-persona.md  rubric.md  testcase.md  user-persona.md
claude-bootstrap/eval/skills/: check-isolation.md  orchestrate-interview.md  rubric-interview.md
claude-bootstrap/eval/templates/: testcase-template.md
claude-bootstrap/sessions/: session-00-bootstrap.md  session-01-plan.md  session-02-implement.md
claude-bootstrap/skills/: bootstrap.md  health.md  orchestrate.md  state-control.md
claude-bootstrap/skills/bootstrap/: SKILL.md  bootstrap-agents.md  bootstrap-audit.md  bootstrap-git.md  bootstrap-hooks.md  bootstrap-interview.md  bootstrap-runtime.md  bootstrap-scaffold.md  bootstrap-state.md  bootstrap-template-logs.md
claude-bootstrap/skills/health/: SKILL.md
claude-bootstrap/templates/: CLAUDE.md  agent.md  context.md
(+39 files in other folders)
